syntax="proto3";

package api.v1.mycoffeshop.user;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "common.proto";

option go_package = "github.com/mendesbarreto/go-my-coffe-shop/proto/gen";


message User {
  string id = 1;
  string name = 2;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}

service UserService {
 rpc SignIn(SignInRequest) returns (SignInResponse) {
    option (google.api.http) = {
      post: "/v1/user/signin"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Sign in"
      description: "Sign in"
      tags: "User"
    };
  }
}
